<resources>
    <string name="app_name">Bahasaku</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">M.Hatta Aldino</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_download">Download</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="your_page">Your Page</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
</resources>
