<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/menu_sign_out" />
    </group>
</menu>
